--- a/index.ipynb
+++ b/index.ipynb
@@ -50,15 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "Base = None"
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "Base = declarative_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import *"
    ]
   },
   {
@@ -72,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.orm import relationship"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,56 +118,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Customer(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'customer'\n",
     "    \n",
-    "    id = None\n",
-    "    name = None\n",
-    "    cart_id = None\n",
+    "    id = Column(Integer, primary_key = True)\n",
+    "    name = Column(String)\n",
+    "    cart_id = Column(Integer, ForeignKey('shoppingCart.id'))\n",
     "    \n",
     "    # Create 1-to-1 relationship with ShoppingCart, as shown in the SQLAlchemy documentation\n",
-    "    shoppingCart = None\n"
+    "    shoppingCart = relationship(\"ShoppingCart\", back_populates='customer', uselist = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ShoppingCart(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'shoppingCart'\n",
     "    \n",
-    "    id = None\n",
-    "    item_id = None\n",
+    "    id = Column(Integer, primary_key = True)\n",
+    "    item_id = Column(Integer, ForeignKey('item.id'))\n",
     "    # Create 1-to-1 relationship with Customer\n",
-    "    customer = None\n",
+    "    customer = relationship('Customer', back_populates = \"shoppingCart\", uselist = False)\n",
     "    # Create 1-to-many relationship with Item\n",
-    "    items = None"
+    "    items = relationship('Item')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Item(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'item'\n",
     "    \n",
-    "    id = None\n",
-    "    description = None\n",
-    "    price = None"
+    "    id = Column(Integer, primary_key = True)\n",
+    "    description = Column(String)\n",
+    "    price = Column(Float)"
    ]
   },
   {
@@ -181,13 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-01-25 15:16:20,952 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-01-25 15:16:20,953 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-01-25 15:16:20,954 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-01-25 15:16:20,954 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-01-25 15:16:20,956 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"customer\")\n",
+      "2019-01-25 15:16:20,956 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-01-25 15:16:20,958 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"shoppingCart\")\n",
+      "2019-01-25 15:16:20,958 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-01-25 15:16:20,959 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"item\")\n",
+      "2019-01-25 15:16:20,960 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    }
+   ],
    "source": [
-    "engine = None\n",
+    "engine = create_engine('sqlite:///shopping.db', echo = True)\n",
+    "Base.metadata.create_all(engine)\n",
     "\n"
    ]
   },
@@ -206,10 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "customer1 = Customer(name=\"Jane\")\n",
@@ -227,11 +242,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "customer1.id, item1.id"
    ]
@@ -257,16 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import Session, sessionmaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "Session = None\n",
+    "Session = sessionmaker(bind = engine)\n",
     "\n",
-    "session = None"
+    "session = Session()"
    ]
   },
   {
@@ -280,13 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "session.add_all(None)"
+    "session.add_all([customer1, cart1, item1])"
    ]
   },
   {
@@ -298,12 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdentitySet([<__main__.Customer object at 0x1061feb38>, <__main__.ShoppingCart object at 0x1061fef28>, <__main__.Item object at 0x1061fe0f0>])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,12 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-01-25 15:19:07,004 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2019-01-25 15:19:07,007 INFO sqlalchemy.engine.base.Engine INSERT INTO item (description, price) VALUES (?, ?)\n",
+      "2019-01-25 15:19:07,007 INFO sqlalchemy.engine.base.Engine ('widget', 9.99)\n",
+      "2019-01-25 15:19:07,010 INFO sqlalchemy.engine.base.Engine INSERT INTO \"shoppingCart\" (item_id) VALUES (?)\n",
+      "2019-01-25 15:19:07,011 INFO sqlalchemy.engine.base.Engine (1,)\n",
+      "2019-01-25 15:19:07,012 INFO sqlalchemy.engine.base.Engine INSERT INTO customer (name, cart_id) VALUES (?, ?)\n",
+      "2019-01-25 15:19:07,013 INFO sqlalchemy.engine.base.Engine ('Jane', 1)\n",
+      "2019-01-25 15:19:07,015 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.commit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,12 +389,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-01-25 15:19:17,044 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2019-01-25 15:19:17,045 INFO sqlalchemy.engine.base.Engine SELECT customer.id AS customer_id, customer.name AS customer_name, customer.cart_id AS customer_cart_id \n",
+      "FROM customer \n",
+      "WHERE customer.id = ?\n",
+      "2019-01-25 15:19:17,046 INFO sqlalchemy.engine.base.Engine (1,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer1.id"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,9 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
